--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js --ignore sessions --ext js,jsx"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.23.1",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -21,11 +29,9 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.18.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.8.0",
+    "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.23.0",
-    "sequelize-cli": "^6.4.1",
+    "sequelize": "^6.37.3",
     "session-file-store": "^1.5.0"
   }
 }
