--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
