--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.4",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -26,6 +27,7 @@
     "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
