--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.0",
     "axios": "^1.6.8",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.4",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
